[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Textures/white.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Controllers/RoundPassScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/dark.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/gray.png" type="Texture" id=4]

[node name="RoundPassScreen" type="VBoxContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -89.0
margin_bottom = 89.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0
text = "Round Passed - Improve"
align = 1
valign = 1

[node name="Choises" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 178.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="TextureButton" parent="Choises"]
margin_left = 388.0
margin_right = 468.0
margin_bottom = 160.0
rect_min_size = Vector2( 80, 160 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="Choises/Option1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="TextureButton" parent="Choises"]
margin_left = 472.0
margin_right = 552.0
margin_bottom = 160.0
rect_min_size = Vector2( 80, 160 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="Choises/Option2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option3" type="TextureButton" parent="Choises"]
margin_left = 556.0
margin_right = 636.0
margin_bottom = 160.0
rect_min_size = Vector2( 80, 160 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="Choises/Option3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Choises/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Choises/Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="Choises/Option3" to="." method="_on_Option3_pressed"]
